# LoomoTracking

./: README.md
python/: MICRO_453_TP_13_IPython_Solution.ipynb  client.py  detector.py  final_detector.py  kalman.py  test.py
scripts/: logAprAlgo.xml  pull.bat  pull_data_socket.bat  pull_log.bat  remove.bat  remove_data_socket.bat
socket/: CMakeLists.txt  SampleClient.cpp  SampleServer.cpp  SocketClient.cpp  SocketClient.h  SocketServer.cpp  SocketServer.h  alog.h  compile_socket.sh
socket/policy/: PolicyWrapper.cpp  PolicyWrapper.h  PyUtils.cpp  PyUtils.h  policy.config  sarl.py
